fixed relative positioning overflow

--- a/tool/EPUB3/epub/css/default.css
+++ b/tool/EPUB3/epub/css/default.css
@@ -360,14 +360,32 @@ Slide content
 
 */
 
-#epb3sldrzr-anim-overflow
+#epb3sldrzr-content
 {
-    position: relative;
+    display: block;
+    
+    position: static;
+    min-height: 100%;
+    
     overflow: hidden;
 }
 
-#epb3sldrzr-content > *:not(img):not(.spread):not(#epb3sldrzr-anim-overflow),
-#epb3sldrzr-content > #epb3sldrzr-anim-overflow > *:not(img):not(.spread)
+#epb3sldrzr-anim-overflow
+{
+    display: block;
+    
+    position: relative;
+
+	min-height:VIEWPORT_HEIGHTpx;
+    /*
+    min-height: 100%;
+    */
+    
+    overflow: hidden;
+}
+
+#epb3sldrzr-content > *:not(img):not(.spread):not(#epb3sldrzr-anim-overflow):not(#epb3sldrzr-title),
+#epb3sldrzr-content > #epb3sldrzr-anim-overflow > *:not(img):not(.spread):not(#epb3sldrzr-title)
 {
     padding-left: FONT_SIZEpx;
     padding-left: FONT_SIZErem;
@@ -376,8 +394,8 @@ Slide content
     padding-right: FONT_SIZErem;
 }
 
-#epb3sldrzr-content > *:not(img):not(.spread):not(#epb3sldrzr-anim-overflow),
-#epb3sldrzr-content > #epb3sldrzr-anim-overflow > *:not(img):not(.spread)
+#epb3sldrzr-content > *:not(img):not(.spread):not(#epb3sldrzr-anim-overflow):not(#epb3sldrzr-title),
+#epb3sldrzr-content > #epb3sldrzr-anim-overflow > *:not(img):not(.spread):not(#epb3sldrzr-title)
 {
     margin-top: FONT_SIZE_HALFpx;
     margin-top: FONT_SIZE_HALFrem;
